# theseus-cores

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.md  README.md  requirements.txt
chan_gen_tool/: README.md  requirements.txt  setup.py
chan_gen_tool/phy_tools/: README.md  __init__.py  adv_pfb.py  adv_plt.py  channelizer.py  dsp_opts.py  fil_utils.py  fp_utils.py  gen_utils.py  gen_xfft.py  mls.py  plotly_utils.py  verilog_filter.py  verilog_gen.py  vgen_xilinx.py
chan_gen_tool/phy_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chan_gen_tool/phy_tools/.ipynb_checkpoints/: half_band-checkpoint.ipynb  var_delay_test-checkpoint.ipynb
chan_gen_tool/phy_tools/chan_test/src/: axi_fifo_18.v  axi_fifo_19.v  axi_fifo_2.v  axi_fifo_3.v  axi_fifo_51.v  axi_fifo_80.v  chan_top_512_32_16_16.v  cic_M256_N1_R1_iw5_0.v  cic_M256_N1_R1_iw5_0_offset_sp_rom.v  count_cycle_cw16_18.v  count_cycle_cw16_65.v  count_cycle_cw16_8.v  count_cycle_cw8_18.v  count_cycle_cw8_8.v  downselect.v  dp_block_read_first_ram.v  dp_block_write_first_ram.v  dsp48_cic_M256_N1_R1_iw5_0_corr.v  dsp48_comb_M256_N1_iw5_0.v  dsp48_pfb_mac.v  dsp48_pfb_rnd.v  exp_shifter_512Mmax_16iw_256avg_len.v  exp_shifter_8Mmax_16iw_256avg_len.v  input_buffer_1x.v  mem_ctrl_pfb_512Mmax_16iw_16ow_32tps.v  mem_ctrl_pfb_8Mmax_16iw_16ow_10tps.v  pfb_512Mmax_16iw_16ow_32tps.v  pfb_512Mmax_16iw_16ow_32tps_dp_rom.v  pfb_8Mmax_16iw_16ow_10tps.v  pfb_8Mmax_16iw_16ow_10tps_dp_rom.v  pipe_mux_512_1.v  pipe_mux_8_1.v  slicer_48_13.v
chan_gen_tool/phy_tools/streamlit_app/: SessionState.py  chan_gen_tool.py  requirements.txt
chan_gen_tool/phy_tools/streamlit_app/tmp/: grc_word_reader.sv  xfft_128.xci
chan_gen_tool/phy_tools/verilog/: grc_word_reader.sv  input_buffer.v
chan_gen_tool/streamlit_app/: gen_buffers.py  requirements.txt
chan_gen_tool/streamlit_app/phy_tools/: adv_pfb.py  channelizer.py  fil_utils.py  gen_utils.py  gen_xfft.py  plotly_utils.py  plt_utils.py  verilog_filter.py  verilog_gen.py  vgen_xilinx.py
chan_gen_tool/streamlit_app/phy_tools/verilog/: input_buffer_1x.v
cmake/Modules/: theseusConfig.cmake
docs/: README.theseus
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
fpga-rfnoc/: README.md
fpga-rfnoc/dsp-utils/: Makefile.inc  README.md  noc_block_ddc_1_to_n.v  noc_block_ducddc.v
fpga-rfnoc/examples/: basic-dsp-utils.yml
fpga-rfnoc/m2_channelizer/: Makefile.inc  noc_block_channelizer.v
fpga-rfnoc/testbenches/noc_block_channelizer_tb/: M_1024_taps.txt  M_128_taps.txt  M_16_taps.txt  M_2048_taps.txt  M_256_taps.txt  M_32_taps.txt  M_512_taps.txt  M_64_taps.txt  M_8_taps.txt  Makefile  chan_rfnoc_sim.vh  environment.yml  grc_word_writer.sv  noc_block_channelizer_tb.sv  readme.md  runtestbench.sh
fpga-rfnoc/testbenches/noc_block_channelizer_tb/python/: channelizer.py
fpga-rfnoc/testbenches/noc_block_channelizer_tb/shared_tools/python/: __init__.py  fil_utils.py  fp_utils.py  gen_utils.py  mls.py  spec_an.py
fpga-rfnoc/testbenches/noc_block_ddc_1_to_n_tb/: Makefile  noc_block_ddc_1_to_n_tb.sv
fpga-rfnoc/testbenches/noc_block_ducddc_tb/: Makefile  runtestbench.sh
fpga-src/: LICENSE  README.md
fpga-src/axi_m2_channelizer/ip/xfft/: Makefile.inc  xfft.xci
fpga-src/axi_m2_channelizer/src/verilog/: add_16_16_l2.v  axi_fifo_18.v  axi_fifo_19.v  axi_fifo_2.v  axi_fifo_3.v  axi_fifo_51.v  axi_fifo_64.v  axi_fifo_80.v  chan_rfnoc_sim.vh  chan_top_2048M_16iw_16ow_32tps.v  chan_top_2048M_16iw_16ow_32tps_sim.do  chan_top_2048M_16iw_16ow_32tps_tb.v  chan_top_2x_2048M_16iw_16ow_32tps.v  chan_top_2x_2048M_16iw_16ow_32tps_sim.do  chan_top_2x_2048M_16iw_16ow_32tps_tb.v  channelizer_top.v  cic_M256_N1_R1_iw5_0.v  cic_M256_N1_R1_iw5_0_correction_sp_rom.v  cic_M256_N1_R1_iw5_0_offset_sp_rom.v  circ_buffer.v  comb_M256_N1_iw5_0.v  count_cycle_cw16_14.v  count_cycle_cw16_18.v  count_cycle_cw16_6.v  count_cycle_cw16_65.v  count_cycle_cw16_8.v  downselect.v  downselect_2048.v  dp_block_read_first_ram.v  dp_block_write_first_ram.v  dsp48_cic_M256_N1_R1_iw5_0.v  dsp48_cic_M256_N1_R1_iw5_0_corr.v  dsp48_comb_M256_N1_iw5_0.v  dsp48_corr_mult.v  dsp48_integrator_section_0.v  dsp48_output_add.v  dsp48_pfb_mac.v  dsp48_pfb_mac_0.v  dsp48_pfb_rnd.v  dsp48_shift_corr.v  (+19 more)
fpga-src/utils/: multi_split_stream.v
gr-theseus/: CMakeLists.txt  README.md
gr-theseus/examples/: rfnoc_ddc_channelizer.grc  rfnoc_pfb_channelizer.grc  rfnoc_pfb_channelizer_host.grc  rfnoc_pfb_channelizer_radio.grc  rfnoc_rational_resampler.grc
gr-theseus/grc/: CMakeLists.txt  theseus.tree.yml  theseus_block_tree.xml  theseus_rfnoc_ddc_1_to_n.block.yml  theseus_rfnoc_ddc_1_to_n.xml  theseus_rfnoc_ducddc.block.yml  theseus_rfnoc_ducddc.xml  theseus_rfnoc_pfbchan.block.yml  theseus_rfnoc_pfbchan.xml
gr-theseus/include/theseus/: CMakeLists.txt  api.h  pfbchan.h  pfbchan_block_ctrl.hpp  theseus_generic.h
gr-theseus/lib/: CMakeLists.txt  pfbchan_block_ctrl_impl.cpp  pfbchan_impl.cc  pfbchan_impl.h  theseus_generic_impl.cc  theseus_generic_impl.h
gr-theseus/python/: CMakeLists.txt  __init__.py
gr-theseus/swig/: CMakeLists.txt  theseus_swig.i
uhd-theseus/: CMakeLists.txt  LICENSE  README.md
uhd-theseus/include/theseus/: CMakeLists.txt  ddc_1_to_n_block_ctrl.hpp  ducddc_block_ctrl.hpp  pfbchan_block_ctrl.hpp
uhd-theseus/lib/: CMakeLists.txt  ddc_1_to_n_block_ctrl_impl.cpp  ducddc_block_ctrl_impl.cpp  pfbchan_block_ctrl_impl.cpp
uhd-theseus/rfnoc-blocks/: CMakeLists.txt  ddc_1to2.xml  ddc_1to4.xml  pfb_channelizer_m2.xml
